# CameraWatcher

./: .clang-format  CMakeLists.txt  README.md  camwatcher.py  lsusboutput.txt  qt5.natvis  readlsusb.py  storagemedia.py  style.css  usb.py
res/: resources.qrc  style.css
src/: cameralistwidget.cpp  cameralistwidget.h  camerawidget.cpp  camerawidget.h  camerawindow.cpp  camerawindow.h  main.cpp  usbdevice.cpp  usbdevice.h  usbmanager.cpp  usbmanager.h  utils.cpp  utils.h
